--- a/ProjektRapport/sektioner/Arkitektur/Indledning.tex
+++ b/ProjektRapport/sektioner/Arkitektur/Indledning.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-I arkitekturen bliver produktet, der kan løse problemformuleringen udformet. I kravspecifikationen er det blevet gjort klart hvilke krav der er til systemet. Ud fra kravene er et blok defintionsdiagram og to interne blokdiagrammer blevet lavet, som viser blokkene og deres interne forbindelser i den overordnede løsning.
+I arkitekturen bliver produktet, der kan løse problemformuleringen udformet. I kravsspecifikationen er det blevet gjort klart, hvilke krav der er til systemet. Ud fra kravene er et blok definitionsdiagram og to interne blokdiagrammer blevet lavet, som viser blokkene og deres interne forbindelser i den overordnede løsning.
 
-Et allokeringsdiagram er med til at underbygge forståelsen for hvordan disse blokke bliver realiseret softwaremæssigt og hvilke enheder der vil være omdrejningspunkt for hver blok.
+Et allokeringsdiagram er med til at underbygge forståelsen for, hvordan disse blokke bliver realiseret softwaremæssigt, og hvilke enheder der vil være omdrejningspunkt for hver blok.
 
 I rapporten er kun den endelige og vigtigste arkitektur medtaget. Der henvises til dokumentationen for den resterende del af arkitekturen i projektet.\footnote{Projektdokumentation, 5, Arkitektur}
