--- a/ProjektRapport/sektioner/Distributionslinje.tex
+++ b/ProjektRapport/sektioner/Distributionslinje.tex
@@ -6,7 +6,7 @@ Til simulering af en distributionslinje skulle kabellængde og kabelparametre be
 
 \subsection{Design og implementering}
 
-På baggrund af de valgte kabelparametre og tilgængelige komponenter, er simuleringen af Distributionslinjen implementeret med værdierne 6,2 $\Omega$ og 13,6 mH gennem to modstande og to spoler i serie. Til den centrale Måleenhed implementeres også en 1 $\Omega$ modstand. Den implementerede distributionslinje ses på figur \ref{fig:DisbLinje}.
+På baggrund af de valgte kabelparametre og tilgængelige komponenter er simuleringen af Distributionslinjen implementeret med værdierne 6,2 $\Omega$ og 13,6 mH gennem to modstande og to spoler i serie. Til den centrale Måleenhed implementeres også en 1 $\Omega$ modstand. Den implementerede Distributionslinje ses på figur \ref{fig:DisbLinje}.
 
 \begin{figure}[H]
 	\centering
