--- a/ProjektRapport/sektioner/FremtidigtArbejde/Distributionslinje.tex
+++ b/ProjektRapport/sektioner/FremtidigtArbejde/Distributionslinje.tex
@@ -3,6 +3,6 @@
 
 For at få større udbytte af de data, der kommer fra Måleenheden, kunne det være interessant at tilføje elementer, der vil påvirke systemet i højere grad end prototypens simulering af en distributionslinje og forbrugere. 
 
-Da der i det eksisterende system ikke ses en stor påvirkning af power factor, kunne en højere grad af spolevirkning implementeres. Dette ville vise, hvorledes Distributionslinjen påvirker power factoren, og hvordan Måleenheden overvåger systemet. Dog vil det kræve en væsentlig større spole og teorien for en kort linjemodel ville formodentlig ikke gælde, så dette ville hovedsageligt være for at tydeliggøre funktionaliteten af Måleenheden. 
+Da der i det eksisterende system ikke ses en stor påvirkning af power factor, kunne en højere grad af spolevirkning implementeres. Dette ville vise, hvorledes Distributionslinjen påvirker power factoren, og hvordan Måleenheden overvåger systemet. Dog vil det kræve en væsentlig større spole, og teorien for en kort linjemodel ville formodentlig ikke gælde, så dette ville hovedsageligt være for at tydeliggøre funktionaliteten af Måleenheden. 
 
 Foruden yderligere spolevirkning, kunne det være relevant at tilføje en eller flere decentrale producenter i systemet og observere påvirkningen herfra. En eventuel løsning eller implementering af dette er dog ikke undersøgt nærmere, men ville være et bud på fremtidigt arbejde ud fra problemformuleringen. 
