--- a/ProjektRapport/sektioner/Modultest.tex
+++ b/ProjektRapport/sektioner/Modultest.tex
@@ -2,4 +2,4 @@
 
 \section{Modultest}
 
-Ved gennemførelse af modultest for det samlede system for Distributionslinje, Belastning og Trinskifter, blev det konkluderet, at det implementerede system opnår forventet spænding- og strømniveauer ved variabel belastning. Dog ses en lille afvigelse mellem de simulerede og målte værdier, men resultaterne kan anvendes til proof of concept\footnote{Projektdokumentation, 8.5.1, Spænding over belastning}. Da Distributionslinjens spolevirkning påvirker værdien for power factor i systemet, blev værdien af denne ligeledes målt af måleenheden. Denne påvirkning af power factor kan ses i måleresultaterne, men spolevirkningen er ikke stor nok til, at power factoren ændres ved forskellige belastningsværdier\footnote{Projektdokumentation, 8.5.2, Power factor}. 
+Ved gennemførelse af modultest for det samlede system for Distributionslinje, Belastning og Trinskifter blev det konkluderet, at det implementerede system opnår forventet spænding- og strømniveauer ved variabel belastning. Dog ses en lille afvigelse mellem de simulerede og målte værdier, men resultaterne kan anvendes til proof of concept\footnote{Projektdokumentation, 8.5.1, Spænding over belastning}. Da Distributionslinjens spolevirkning påvirker værdien for power factor i systemet, blev værdien af denne ligeledes målt af Måleenheden. Denne påvirkning af power factor kan ses i måleresultaterne, men spolevirkningen er ikke stor nok til, at power factoren ændres ved forskellige belastningsværdier\footnote{Projektdokumentation, 8.5.2, Power factor}. 
