--- a/ProjektRapport/sektioner/Styringsenhed/Indledning.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Indledning.tex
@@ -3,7 +3,7 @@
 
 \section{Indledning}
 
-I dette afsnit vil der blive gået i dybden med den samlede Styringsenhed. Herunder vil der blandt andet være fokus på nogle af de valg der er taget både før og i løbet af designfasen for Styringsenhed og de enkelte moduler den består af. Derudover vil selve implementeringen af Styringsenhedens software på dens processorere være beskrevet, men der vil i rapporten kun blive beskrevet centrale dele og derudover udvalgte eksempler.
+I dette afsnit vil der blive gået i dybden med den samlede Styringsenhed. Herunder vil der blandt andet være fokus på nogle af de valg, der er taget både før og i løbet af designfasen for Styringsenhed og de enkelte moduler, den består af. Derudover vil selve implementeringen af Styringsenhedens software på dens processorere være beskrevet, men der vil i rapporten kun blive beskrevet centrale dele og udvalgte eksempler.
 
 
 
