--- a/ProjektRapport/sektioner/Arkitektur/IBD.tex
+++ b/ProjektRapport/sektioner/Arkitektur/IBD.tex
@@ -4,7 +4,7 @@
 
 \section{Interne blokdiagramer}
 
-Herunder ses de interne blokdiagrammer for spændingsregulator systemet. De interne blokdiagrammer er dannet for at give et indtryk af hvordan enhederne kommunikerer og sender signaler indbyrdes. Først ses det interne blokdiagram for hele systemet, hvor de overordnede forbindelser i spændingsregulatoren kan ses. Se figur \ref{fig:IBDSp}. For et yderligere overblik over de indbyrdes signaler, se dokumentation\footnote{Projektdokumentation, 5.2, Intern blok diagram}.  Derefter ses et internt blokdiagram for selve styringsenhed, der yderligere består af tre mindre dele. 
+Herunder ses de interne blokdiagrammer for spændingsregulator systemet. De interne blokdiagrammer er dannet for at give et indtryk af, hvordan enhederne kommunikerer og sender signaler indbyrdes. Først ses det interne blokdiagram for hele systemet, hvor de overordnede forbindelser i spændingsregulatoren kan ses. Se figur \ref{fig:IBDSp}. For et yderligere overblik over de indbyrdes signaler, se dokumentation\footnote{Projektdokumentation, 5.2, Intern blok diagram}.  Derefter ses et internt blokdiagram for selve Styringsenhed, der yderligere består af tre mindre dele. 
 
 \begin{figure}[htbp] % (alternativt [H])
 	\centering
@@ -13,7 +13,7 @@ Herunder ses de interne blokdiagrammer for spændingsregulator systemet. De inte
 	\label{fig:IBDSp}
 \end{figure}
 
-Det interne blokdiagram for styringsenheden er udviklet for at beskrive hvordan modulerne i styringsenheden kommunikerer indbyrdes. Det ses samtidig hvilke inputs og outputs der er til og fra den samlede styringsenhed. Se figur \ref{fig:IBDSp}. For yderlig uddybelse af de indbyrdes signaler se dokumentation\footnote{Projektdokumentation, 5.2, Intern blok diagram}.
+Det interne blokdiagram for Styringsenheden er udviklet for at beskrive, hvordan modulerne i Styringsenheden kommunikerer indbyrdes. Det ses samtidig, hvilke inputs og outputs der er til og fra den samlede Styringsenhed. Se figur \ref{fig:IBDSp}. For yderlig uddybelse af de indbyrdes signaler se dokumentation\footnote{Projektdokumentation, 5.2, Intern blok diagram}.
 
 
 \begin{figure}[htbp] % (alternativt [H])
