--- a/ProjektRapport/sektioner/FunktionelleKrav.tex
+++ b/ProjektRapport/sektioner/FunktionelleKrav.tex
@@ -4,8 +4,8 @@
 \section{Funktionelle krav}
 
 Funktionaliteten af systemet er beskrevet i tre use cases, som beskriver brugerens interaktion med systemet. Use casene vil her blive kort beskrevet, og et use case diagram er vist i Figur \ref{fig:UsecaseDiagram}.
- Den automatiske spændingsregulering vil ligeledes blive beskrevet, og vist i et tilstandsdiagram på Figur \ref{fig:autoSTM}.
-  Se dokumentation\footnote{Projektdokumentaion, 3.3, Funktionelle krav} for uddybning af funktionelle krav. 
+ Den automatiske spændingsregulering vil ligeledes blive beskrevet og vist i et tilstandsdiagram på Figur \ref{fig:autoSTM}.
+  Se dokumentation\footnote{Projektdokumentation, 3.3, Funktionelle krav} for uddybning af funktionelle krav. 
 
 \subsubsection{Use case 1 - Start manuel styring}
 Målet med denne use case er at ændre systemets tilstand fra automatisk til manuel mode. Dette gøres af brugeren, som vælger manuel styring på brugergrænsefladen. 
@@ -14,7 +14,7 @@ Målet med denne use case er at ændre systemets tilstand fra automatisk til man
 Målet med denne use case er at ændre systemets tilstand fra manuel til automatisk mode. Dette gøres af brugeren, som vælger automatisk styring på brugergrænsefladen. 
 
 \subsubsection{Use case 3 - Skift trin}
-Målet med denne use case er at skifte trin på trintransformeren. Forudsætningen for use casen er, at systemet er i manuel mode. Brugeren kan via brugergrænsefladen skifte trin op eller ned afhængigt af hvilket trin der er aktivt. 
+Målet med denne use case er at skifte trin på trintransformeren. Forudsætningen for use casen er, at systemet er i manuel mode. Brugeren kan via brugergrænsefladen skifte trin op eller ned afhængigt af hvilket trin, der er aktivt. 
 
 \subsubsection{Use case diagram}
 \begin{figure}[H] % (alternativt [H])
