--- a/ProjektRapport/sektioner/Maaleenhed/Kalibrering.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Kalibrering.tex
@@ -3,9 +3,9 @@
 
 \section{Kalibrering af måleenhed}
 
-Den forstærkning og dæmpning der er implementeret i Måleenhedens hardware, giver anledning til en offset fejl på målingerne. Da forstærkningen og dæmpningen begge er lineære kan der laves en simpel kalibrering af måleenheden, som er beskrevet i dokumentationen\footnote{Projektdokumentation, 9.2.7, Kalibrering af Måleenhed}.\newline
+Den forstærkning og dæmpning, der er implementeret i Måleenhedens hardware, giver anledning til en offset fejl på målingerne. Da forstærkningen og dæmpningen begge er lineære, kan der laves en simpel kalibrering af måleenheden, som er beskrevet i dokumentationen\footnote{Projektdokumentation, 9.2.7, Kalibrering af Måleenhed}.\newline
 
-Ved at påtrykke måleenheden en kendt spænding og aflæse den målte værdi på måleenheden, kan sammenhængen mellem reel spænding og målt spænding plottes som en lineær sammenhæng. Hældningen af den lineære tendenslinje vil give kalibreringskonstanten, som skal ganges på målingen i softwaren. 
+Ved at påtrykke Måleenheden en kendt spænding og aflæse den målte værdi på Måleenheden kan sammenhængen mellem reel spænding og målt spænding plottes som en lineær sammenhæng. Hældningen af den lineære tendenslinje vil give kalibreringskonstanten, som skal ganges på målingen i softwaren. 
 
 Resultatet af kalibreringen er vist i Figur \ref{fig:MEgraf}
 
