--- a/ProjektRapport/sektioner/Maaleenhed/softwareS.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/softwareS.tex
@@ -5,11 +5,11 @@
 I dette afsnit vil design og implementering af softwaren på PSoC blive beskrevet. Herunder ADC konvertering, Fourier beregninger og  UART kommunikation. For detaljeret beskrivelse af softwaren henvises til dokumentationen\footnote{Projektdokumentation, 9.2, Software}
 
 \subsubsection{Overordnet beskrivelse}
-Det overordnede flow i koden er vist i Figur \ref{fig:MEflowchart}, og vil blive beskrevet i den følgende tekst.  
+Det overordnede flow i koden er vist i Figur \ref{fig:MEflowchart} og vil blive beskrevet i den følgende tekst.  
 
-Ved start af Måleenheden sker der en række initieringer af interrupts og blokkald. Herefter ender koden i en uendelig loop, uden aktivitet. Ved modtagelse af data over UART forbindelsen aktiveres en interruptrutine, hvor hovedparten af kodens funktionalitet er allokeret. 
-Afhængigt af hvilken karakter der er modtaget på UART forbindelsen udførers forskellige instruktioner. Ifølge protokollen for UART-forbindelsen modtages karakterene A-B-C-D, i rækkefølge, se dokumentationen\footnote{Projektdokumentation, 7.2, UART protokol}.
-Når den første karakter A er modtaget påbegynder Måleenheden sampling af signalerne, hvorefter værdien for strøm sendes tilbage over UART forbindelsen. Herefter afventes de resterende modtage-interrupts, som giver anledning til at spænding, THD, og power factor sendes til Styringsenheden. 
+Ved start af Måleenheden sker der en række initieringer af interrupts og blokkald. Herefter ender koden i et uendeligt loop uden aktivitet. Ved modtagelse af data over UART forbindelsen aktiveres en interruptrutine, hvor hovedparten af kodens funktionalitet er allokeret. 
+Afhængigt af hvilken karakter, der er modtaget på UART forbindelsen udføres forskellige instruktioner. Ifølge protokollen for UART-forbindelsen modtages karakterene A-B-C-D i rækkefølge, se dokumentationen\footnote{Projektdokumentation, 7.2, UART protokol}.
+Når den første karakter A er modtaget, påbegynder Måleenheden sampling af signalerne, hvorefter værdien for strøm sendes tilbage over UART forbindelsen. Herefter afventes de resterende modtage-interrupts, som giver anledning til, at spænding, THD, og power factor sendes til Styringsenheden. 
 \begin{figure}[H] % (alternativt [H])
 	\centering
 	\includegraphics[width=0.7\textwidth]{Figure/MEflowchart.png}
