--- a/ProjektRapport/prj4projektrapport.tex
+++ b/ProjektRapport/prj4projektrapport.tex
@@ -17,6 +17,7 @@
 \renewcommand{\danishhyphenmins}{22} 	% bedre orddeling, minimum to tegn før og efter deling
 \usepackage{lmodern}  					% gør underscores pænere
 \usepackage{microtype} 					% laver micro ændringer i text for at udgå luft og orddeling
+\usepackage[bottom]{footmisc}			% Sætter fodnoter i bunden.
 
 
 %% Forside text
@@ -175,7 +176,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Arkitektur/BDD}
 \input{sektioner/Arkitektur/IBD}
 \input{sektioner/Arkitektur/Allokering}
-\chapter{Distributionslinje, belastning og trinskifter}
+\chapter{Distributionslinje, belastning og Trinskifter}
 \input{sektioner/Distributionslinje}
 \input{sektioner/Belastning}
 \input{sektioner/Trinskifter}
@@ -200,7 +201,7 @@ linkcolor=Black, citecolor=Black]{hyperref}
 \input{sektioner/Styringsenhed/Kommunikationsmodul}
 \input{sektioner/Styringsenhed/Test}
 \input{sektioner/Styringsenhed/Delkonklusion}
-\chapter{Resultat og Diskussion}
+\chapter{Resultat og diskussion}
 \input{sektioner/Resultat}
 \input{sektioner/Resultat2}
 \chapter{Metode og proces}
