--- a/ProjektRapport/sektioner/Arkitektur/BDD.tex
+++ b/ProjektRapport/sektioner/Arkitektur/BDD.tex
@@ -1,13 +1,13 @@
 % !TEX root = ../../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
-
+\newpage
 \section{Blok defintionsdiagram}
 
 I dette afsnit ses blok definitionsdiagrammet for Spændingsregulator. Se figur \ref{fig:BDDSpaendingsregulator}. BDD'et er lavet for at give et overordnet indblik i de blokke, systemet består af.
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
-	\includegraphics[width=0.7\textwidth]{Figure/BDDSpaendingsregulator}
+	\includegraphics[width=0.9\textwidth]{Figure/BDDSpaendingsregulator}
 	\caption{BDD Spændingsregulator}
 	\label{fig:BDDSpaendingsregulator}
 \end{figure}
