--- a/ProjektRapport/sektioner/Krav.tex
+++ b/ProjektRapport/sektioner/Krav.tex
@@ -4,9 +4,9 @@
 Dette kapitel indeholder en overordnet beskrivelse af systemet samt en gennemgang af de funktionelle og ikke funktionelle krav, der stilles til systemet. 
 
 \section{Systembeskrivelse}
-Spændingsregulatoren skal være i stand til at analysere forholdene på distributionslinjen. Derfor udvikles en måleenhed, som kan placeres decentralt, ved hver forbruger, og centralt ved spændingsregulatoren. Måleenhederne skal sende værdier for spænding, strøm, powerfactor og indhold af harmoniske til et system, som regulerer spændingen på baggrund af disse målinger. 
+Spændingsregulatoren skal være i stand til at analysere forholdene på en distributionslinje. Derfor udvikles en måleenhed, som kan placeres decentralt, ved hver forbruger, og centralt ved spændingsregulatoren. Måleenhederne skal sende værdier for spænding, strøm, powerfactor og indhold af harmoniske til et system, som regulerer spændingen på baggrund af disse målinger. 
 
 Spændingsreguleringen laves med en trintransformer, hvor der med en styringsenhed kan skiftes mellem trinene. Styringsenheden kan automatisk regulere spændingen jf. data fra måleenhederne, eller den kan styres manuelt på en grafisk brugergrænseflade. 
 
-Systemet, der er udviklet i dette projekt, er proof of concept, så spændingsniveauet er skaleret ned.  Der er designet et simuleringskredsløb i form af en distributionslinje og en række forbrugere for at vise funktionaliteten af Spændingsregulatoren. Forbrugerene  kan kobles til/fra nettet, for at generere et spændingsfald, der giver anledning til en regulering af trintransformeren. 
+Systemet, der er udviklet i dette projekt, er proof of concept, så spændingsniveauet er skaleret ned.  Der er designet et simuleringskredsløb i form af en distributionslinje og en række forbrugere for at vise funktionaliteten af Spændingsregulatoren. Forbrugerene  kan kobles til/fra nettet for at generere et spændingsfald, der giver anledning til en regulering af trintransformeren. 
 
