--- a/ProjektRapport/sektioner/MetodeOgProcess.tex
+++ b/ProjektRapport/sektioner/MetodeOgProcess.tex
@@ -26,12 +26,12 @@ Holdinddelingen og ansvarsområder ses i Tabel \ref{tab:arbejdsfordeling}.
 	\label{tab:arbejdsfordeling}
 	\begin{tabular}{@{}lll@{}}
 		\toprule
-		Holdnr.            & Navn                    & Arbejdsområde                                                  \\ \midrule
-		\multirow{2}{*}{1} & Jeppe Hansen            & \multirow{2}{*}{Måleenhed}                                     \\
+		Navn                    & Arbejdsområde                                                  \\ \midrule
+		\multirow{2}{*}{Jeppe Hansen}             & \multirow{2}{*}{Måleenhed}                                     \\
 		& Søren Jensen            &                                                                \\\midrule
-		\multirow{2}{*}{2} & Laurids Jørgensen       & \multirow{2}{*}{Styringsenhed}                                 \\
+		\multirow{2}{*}{Laurids Jørgensen}        & \multirow{2}{*}{Styringsenhed}                                 \\
 		& Dennis Slot Larsen            &                                                                \\\midrule
-		\multirow{2}{*}{3} & Caroline Møller Sørensen         & \multirow{2}{*}{Distributionslinje, belastning og Trinskifter} \\
+		\multirow{2}{*}{Caroline Møller Sørensen} &          & \multirow{2}{*}{Distributionslinje, belastning og Trinskifter} \\
 		& Sophia Amalie Mortensen &                                                                \\ \midrule
 	\end{tabular}
 \end{table}
