--- a/ProjektRapport/sektioner/Termliste.tex
+++ b/ProjektRapport/sektioner/Termliste.tex
@@ -9,7 +9,7 @@
 	\begin{tabular}{|l|l|}
 		\hline
 		\textbf{Term} 	& \textbf{Beskrivelse} \\\hline
-		Spændingsregulator	& Gruppens samlede udviklede prototype \\\hline
+		Spændingsregulator	& Projektets prototype \\\hline
 		Trintransformer	& Transformer med variabelt omsætningsforhold \\\hline
 		Trinskifter	& Omfatter trintransformer og relækredsløb  \\\hline
 		Styringsenhed	& PLC, HMI og Arduino \\\hline
