--- a/ProjektRapport/sektioner/Abstract.tex
+++ b/ProjektRapport/sektioner/Abstract.tex
@@ -1,9 +1,9 @@
 % !TEX root = ../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-This report describes a fourth semester project at Aarhus School of Engineering in the field of Electical Engineering. The thesis is devoted to the development of a system that ensure a stable voltage level on a distribution line with varying load.
+This paper describes a $4^{th}$ semester project at Aarhus School of Engineering in the field of Electical Engineering. The thesis is devoted to the development of a system that ensures a stable voltage level on a distribution line with varying load.
 
-The report describes a prototype of a voltage regulator, which can be installed on an existing distribution line. The prototype contains a simulation of a distribution line, on which the functionality of the voltage regulator is demonstrated. The voltage regulation is performed with a step transformer that changes step based on data from measurement devices placed centrally and decentrally on the distribution line. 
+The paper describes a prototype of a voltage regulator, which can be installed on an existing distribution line. The prototype contains a simulation of a distribution line, on which the functionality of the voltage regulator is demonstrated. The voltage regulation is performed with a step transformer that changes step based on data from measurement devices placed centrally and decentrally on the distribution line. 
 
-The project includes programming of measurement devices on PSOC, controlling/regulation of the step transformer on a Siemens PLC and TCP-communication.
+The project includes programming of measurement devices on PSoC, controlling of the step transformer on a Siemens PLC and TCP-communication.
 
