--- a/ProjektRapport/sektioner/Arkitektur/IBD.tex
+++ b/ProjektRapport/sektioner/Arkitektur/IBD.tex
@@ -4,7 +4,7 @@
 
 \section{Interne blokdiagrammer}
 
-Herunder ses interne blokdiagrammer Spændingsregulator. De interne blokdiagrammer er dannet for at give et indtryk af, hvordan enhederne kommunikerer og sender signaler indbyrdes. Først ses det interne blokdiagram for hele systemet, hvor de overordnede forbindelser i spændingsregulatoren kan ses. Se figur \ref{fig:IBDSp}. For et yderligere overblik over de indbyrdes signaler, se dokumentation\footnote{Projektdokumentation, 5.2, Intern blok diagram}.  Derefter ses et internt blokdiagram for selve Styringsenhed, der yderligere består af tre mindre dele. 
+Herunder ses interne blokdiagrammer for Spændingsregulatoren. De interne blokdiagrammer er dannet for at give et indtryk af, hvordan enhederne kommunikerer og sender signaler indbyrdes. Først ses det interne blokdiagram for hele systemet, hvor de overordnede forbindelser i Spændingsregulatoren kan ses. Se figur \ref{fig:IBDSp}. For et yderligere overblik over de indbyrdes signaler, se dokumentation\footnote{Projektdokumentation, 5.2, Intern blok diagram}.  Derefter ses et internt blokdiagram for selve Styringsenhed, der yderligere består af tre mindre dele. 
 
 \begin{figure}[htbp] % (alternativt [H])
 	\centering
