--- a/ProjektRapport/sektioner/Distributionslinje.tex
+++ b/ProjektRapport/sektioner/Distributionslinje.tex
@@ -2,7 +2,7 @@
 
 \section{Distributionslinje}
 
-Til simulering af en distributionslinje skulle kabellængde og kabelparametre bestemmes. For kabelparametre blev der i samarbejde med vejleder valgt en kabeltype fra NKT Cables, se bilag B1. For kabellængden kontaktede projektgruppen energiselskabet Eniig og modtog et kortudsnit fra deres netbase, se bilag C2. Længden af distributionslinjer i kortudsnittet er relativt korte, og med de valgte kabelparametre, 0,10 $\Omega$/km og 0,22 mH/km, vil dette ikke påvirke spændingen tilstrækkeligt. For at få en påvirkning fra kablet vælges det derfor at simulere en distributionslinje med længde 60 km\footnote{Projektdokumentation, 8.1, Distributionslinje}.  
+Til simulering af en distributionslinje skulle kabellængde og kabelparametre bestemmes. For kabelparametre blev der i samarbejde med vejleder valgt en kabeltype fra NKT Cables, se bilag B1. For kabellængden kontaktede projektgruppen energiselskabet Eniig og modtog et kortudsnit fra deres netbase, se bilag C2. Længden af distributionslinjer i kortudsnittet er ikke længere end 1 km, og med de valgte kabelparametre, 0,10 $\Omega$/km og 0,22 mH/km, vil dette ikke påvirke spændingen tilstrækkeligt. For at få en påvirkning fra kablet vælges det derfor at simulere en distributionslinje med længde 60 km\footnote{Projektdokumentation, 8.1, Distributionslinje}.  
 
 \subsection{Design og implementering}
 
@@ -15,4 +15,4 @@ På baggrund af de valgte kabelparametre og tilgængelige komponenter er simuler
 	\label{fig:DisbLinje}
 \end{figure}
 
-På baggrund af Distributionslinjens parametre forventes en påvirkning af bl.a. systemets power factor. Denne er derfor blevet beregnet og simuleret for senere at kunne sammenligne disse værdier med de målte værdier \footnote{Projektdokumentation, 8.3, power factor samt 8.5.2, modultest}. 
+På baggrund af Distributionslinjens parametre forventes en påvirkning af bl.a. systemets power factor. Denne er derfor blevet beregnet og simuleret for senere at kunne sammenligne disse værdier med de målte værdier \footnote{Projektdokumentation, 8.3, power factor samt Projektdokumentation, 8.5.2, modultest}. 
