--- a/ProjektRapport/sektioner/Forord.tex
+++ b/ProjektRapport/sektioner/Forord.tex
@@ -2,8 +2,6 @@
 
 
 
-\textbf{Praktisk information:} I dette projekt deltog seks ingeniørstuderende fra Ingeniørhøjskolen Aarhus. De studerende er på 4. semester på studieretningen Elektrisk Energiteknologi. Projektgruppens vejleder er Emir Pasic, der løbende har vejledt gruppen. Semesterprojektets afleveringsdato er 29/5-2017 og bedømmelsesdato er 28/6-2017. 
-
-\textbf{Læsevejledning:} Henvisninger til projektdokumentationen er lavet med fodnoter, der angiver kapitelnummer og navn på det afsnit, der henvises til. Bilagshenvisninger er lavet med mappenavn og bilagsnummer. 
-
+\textbf{Praktisk information:} I dette projekt deltog seks ingeniørstuderende fra Ingeniørhøjskolen Aarhus Universitet. De studerende er på 4. semester på studieretningen Elektrisk Energiteknologi. Projektgruppens vejleder er Emir Pasic, der løbende har vejledt gruppen. Semesterprojektets afleveringsdato er 29/5-2017 og bedømmelsesdato er 28/6-2017. \\
+\textbf{Læsevejledning:} Henvisninger til projektdokumentationen er lavet med fodnoter, der angiver kapitelnummer og navn på det afsnit, der henvises til. Bilagshenvisninger er lavet med mappenavn og bilagsnummer. \\
 \textbf{Tak til:} Der skal tilskrives en tak til Michael Rangård, Specialist Planlægning, og Poul Bagger Thomsen, Afdelingsleder Anlæg 20/0,4kV, fra Eniig for hjælp med data og besøg på transformerstation.
