--- a/ProjektRapport/sektioner/Konklusion.tex
+++ b/ProjektRapport/sektioner/Konklusion.tex
@@ -2,8 +2,9 @@
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
 
-Projektets formål har været at undersøge, hvordan spændingen kan holdes stabil i et system med varierende belastninger. Dette blev løst ved at udvikle en Spændingsregulator, der kan skifte spændingsniveauer på en trintransformer og derved sikre en bestemt spænding hos forbrugerne, selv om forbruget ændres. Dette har dog vist sig ikke at være relevant i det danske distributionssystem, men projektets overordnede proof of concept er gennemført. Det er implementeret, at Spændingsregulatoren kan observere THD i systemet. Dette har dog også vist sig ikke at være brugbart på distributionsnettet. Det kan derfor konkluderes, at det på nuværende tidspunkt ikke er relevant at implementere i det danske elnet, men at det i fremtiden måske kan blive en del af en smart grid løsning. Projektgruppen har dog løst problemformuleringen og opfyldt kravene til projektet. Gruppen er desuden stolte af, at have fået systemet til at fungere automatisk, selvom det var nedprioriteret i MoSCoW'en. Gennem projektforløbet har gruppen fået kendskab til problematikker og udfordringer i det danske elnet samt fået erfaringer inden for kommunikationsprotokoller, PLC programmering og påvirkning fra harmoniske.  
+Projektets formål har været at undersøge, hvordan spændingen kan holdes stabil i et system med varierende belastninger. Dette blev løst ved at udvikle en Spændingsregulator, der kan skifte spændingsniveauer på en trintransformer og derved sikre en stabil spænding hos forbrugerne, selvom forbruget ændres. Regulering på lavspændingsnettet har dog vist sig ikke at være relevant i det danske distributionssystem, men projektets overordnede proof of concept er gennemført. Det er implementeret, at Spændingsregulatoren kan observere THD i systemet. Dette har dog også vist sig ikke at være nødvendigt på distributionsnettet. Det kan derfor konkluderes, at det på nuværende tidspunkt ikke er relevant at implementere Spændingsregulatoren i det danske elnet, men at det i fremtiden måske kan blive en del af en smart grid løsning. Projektgruppen har dog løst problemformuleringen og opfyldt kravene til projektet. Gruppen er desuden stolte af, at have fået systemet til at fungere automatisk, selvom det var nedprioriteret i MoSCoW'en. Gennem projektforløbet har gruppen fået kendskab til problematikker og udfordringer i det danske elnet samt fået erfaringer inden for kommunikationsprotokoller, PLC programmering og påvirkning fra harmoniske.  
 
+Gruppen har desuden opnået en indsigt, der har gjort, at alle medlemmer har kunne se mulige forbedringer til den udviklede prototype, som ville være oplagte at arbejde videre med, hvis projektet skulle fortsættes.
 
 Der er lavet et grundigt forarbejde og en fornuftigt arbejdsfordeling, hvilket har medført, at tidsplanen er overholdt og et tilfredsstillende resultat er opnået. Opgaver i forbindelse med udviklingen af Spændingsregulatoren har været uddelt i tre hold. Der har været god kommunikation holdene imellem, hvilket har givet en forholdsvis nem integrationsfase uden de store udfordringer. Samlet set har gruppen fået et godt udbytte af projektet både fagligt og inden for projektstyring.
 
