--- a/ProjektRapport/sektioner/Maaleenhed/Modultest.tex
+++ b/ProjektRapport/sektioner/Maaleenhed/Modultest.tex
@@ -5,5 +5,5 @@
 
 Der er løbende udført test af Måleenheden. Efter implementeringen af de enkelte funktioner er der lavet en test for at sikre, at funktionen virker efter hensigten. Først når denne test er godkendt, påbegyndes arbejdet med den næste funktion. Eksempelvis er FFT og THD funktionerne sammenholdt med resultater fra Matlab. 
 
-Efter udviklingen af den samlede Måleenhed er der lavet en modultest. Modultesten indeholder test af spændings-, strøm-, power faktor- og THD-målingerne. For specifikation af tests og resultater henvises til dokumentationen\footnote{Projektdokumentation, 9.3, Modultest}.
+Efter udviklingen af den samlede Måleenhed er der lavet en modultest. Modultesten indeholder test af spændings-, strøm-, power factor- og THD-målingerne. For specifikation af tests og resultater henvises til dokumentationen\footnote{Projektdokumentation, 9.3, Modultest}.
 
