--- a/ProjektRapport/sektioner/Resume.tex
+++ b/ProjektRapport/sektioner/Resume.tex
@@ -1,8 +1,8 @@
 % !TEX root = ../prj4projektrapport.tex
 % SKAL STÅ I TOPPEN AF ALLE FILER FOR AT MASTER-filen KOMPILERES 
 
-Denne rapport beskriver et fjerde semester projekt ved Ingeniørhøjskolen Aarhus Universitet på studieretningen Elektrisk Energiteknologi. Problemstillingen, der arbejdes med, er at udvikle et system, som kan sikre et stabilt spændingsniveau på en distributionslinje med varierende belastning.
+Denne rapport beskriver et 4. semester projekt ved Ingeniørhøjskolen Aarhus Universitet på studieretningen Elektrisk Energiteknologi. Problemstillingen, der arbejdes med, er at udvikle et system, som kan sikre et stabilt spændingsniveau på en distributionslinje med varierende belastning.
 
 Rapporten beskriver en prototype på en spændingsregulator, som kan installeres på en eksisterende distributionslinje. Prototypen indeholder en simulering af en distributionslinje, hvorpå spændingsregulatorens funktionalitet demonstreres. Reguleringen af spændingen foretages med en trintransformer, som skifter trin på baggrund af data fra måleenheder placeret centralt og decentralt på distributionslinjen.
 
-Projektet indeholder programmering af måleenheder på PSOC, styring/regulering af trintransformeren på en Siemens PLC, og TCP-kommunikation. 
+Projektet indeholder programmering af måleenheder på PSoC, styring af trintransformeren på en Siemens PLC og TCP-kommunikation. 
