--- a/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Brugergraenseflade.tex
@@ -8,7 +8,7 @@ Brugergrænsefladen i dette projekt er designet på en HMI KTP 600. Den kan tilg
 
 
 Systemet, der udvikles, skulle være operatørvenligt, hvilket har været grundlag for mange beslutninger omkring HMI'et. Det skal være let at gennemskue, og der skal kun være de mest nødvendige funktionaliteter for at give overblik.
-Der er derfor fremstillet to skærme; Automatisk mode og Manuel mode. Der er få forskelle på de to, men det tydeliggør for operatøren, hvilken tilstand der er aktiv. Skærmen for Automatisk mode kan ses på figur \ref{fig:HMIAutomatiskModeDesign}. Skærmen for manuel mode kan findes i dokumentationen.\footnote{Projektdokumentationen, 10.2.2, Manuel mode}
+Der er derfor fremstillet to skærme; Automatisk mode og Manuel mode. Der er få forskelle på de to, men det tydeliggør for operatøren, hvilken tilstand der er aktiv. Skærmen for Automatisk mode kan ses på figur \ref{fig:HMIAutomatiskModeDesign}. Skærmen for manuel mode kan findes i dokumentationen\footnote{Projektdokumentationen, 10.2.2, Manuel mode}.
 
 \begin{figure}[H] % (alternativt [H])
 	\centering
