--- a/ProjektRapport/sektioner/Styringsenhed/Delkonklusion.tex
+++ b/ProjektRapport/sektioner/Styringsenhed/Delkonklusion.tex
@@ -3,7 +3,7 @@
 
 \section{Delkonklusion}
 
-Styringsenheden har haft tre gennemgående fokuspunkter; Sikkerhed og overskuelighed, pålidelig kommunikation og mulighed for nem udvidelse af softwaren til data fra flere Måleenheder.
+Styringsenheden har haft tre gennemgående fokuspunkter; sikkerhed og overskuelighed, pålidelig kommunikation og mulighed for nem udvidelse af softwaren til data fra flere Måleenheder.
 
 
 I kontrolmodulet var Trinskifter en funktionsblok, der på sikker vis bragte systemet rundt mellem sekvenser, herfor opdelt i tilstande, trin og trinskift. Samtidig skulle kommunikationen være pålidelig, hvilket førte til valget af TCP og separate netværk, der styrer data sendt, og hvor data skal gemmes. De separate netværk gør det også nemt at udvide med flere kommandoer og steder at gemme modtaget data.
